--- a/src/pages/projectBoard/components/Board.css
+++ b/src/pages/projectBoard/components/Board.css
@@ -1,7 +1,7 @@
 .board {
   flex: 1;
   border-radius: 5px;
-  max-width: 260px;
+  width: 260px;
   height: fit-content;
   padding: 10px;
 }
@@ -18,6 +18,7 @@
   padding-left: 3px;
   padding-right: 9px;
   border-radius: 10px;
+  width: fit-content;
 }
 
 .board .status-icon {
@@ -60,6 +61,12 @@
   background: white;
   border-radius: 4px;
   cursor: pointer;
+  margin-top: 10px;
+  cursor: pointer;
+}
+
+.board .add-card:hover {
+  background-color: rgb(216, 216, 216);
 }
 
 .board .addCard-input {
@@ -72,6 +79,7 @@
   outline: none;
   border: 1px solid var(--text-color);
   padding: 6px;
+  margin-top: 10px;
 }
 
 .board-0 {
@@ -79,7 +87,7 @@
 }
 
 .board-0 .status-title {
-  background: rgb(243, 241, 212);
+  background: rgb(255 234 191);
 }
 
 .board-0 .status-icon {
