--- a/src/pages/projectBoard/components/CardInformation.css
+++ b/src/pages/projectBoard/components/CardInformation.css
@@ -9,14 +9,32 @@
 }
 
 .card-info {
-  width: 100%;
-  height: 100%;
-  /* margin: 100px auto; */
+  width: 70%;
+  height: 90%;
+  margin: 20px auto;
   background: #eee;
   padding: 20px;
   border-radius: 4px;
   box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em,
     rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
+}
+
+.card-info h2 {
+  cursor: pointer;
+  width: fit-content;
+  border-radius: 4px;
+  padding: 0 5px;
+}
+
+.card-info .cardTitle-input {
+  background: #eee;
+  outline: none;
+  border: 0;
+  width: 100%;
+  font-size: 1.5em;
+  font-family: Noto Sans TC;
+  border-radius: 4px;
+  padding: 0 5px;
 }
 
 .card-info .project-detail {
@@ -65,6 +83,39 @@
   width: 180px;
 }
 
-.card-info .datepicker:hover {
+.card-info .datepicker:hover,
+.card-info h2:hover {
   background-color: rgb(184, 184, 184);
+}
+
+.card-info .project-content {
+  display: flex;
+  gap: 15px;
+}
+
+.card-info .text {
+  flex: 1;
+}
+.card-info .text-title {
+  text-align: center;
+}
+
+.card-info .markdown-input {
+  margin-top: 5px;
+  width: 100%;
+  height: 450px;
+  outline: none;
+  font-size: 16px;
+  background: rgb(30, 33, 38);
+  color: #abb2bf;
+  border: 0;
+  resize: none;
+}
+
+.card-info .markdown-preview {
+  margin-top: 5px;
+  height: 450px;
+  overflow-y: scroll;
+  background: #fff;
+  padding: 15px;
 }
