--- a/src/pages/projectBoard/components/Card.css
+++ b/src/pages/projectBoard/components/Card.css
@@ -72,6 +72,7 @@
   border-radius: 5px;
   padding: 3px;
   white-space: nowrap;
+  z-index: 50;
 }
 .card-area .delete-card:hover::before {
   content: "delete this card";
@@ -101,4 +102,53 @@
 
 .card-area .datepicker:hover {
   background-color: rgb(237, 237, 237);
+}
+
+.card-backdrop .popup-area {
+  width: 300px;
+  height: 150px;
+  margin: 300px auto;
+  background: #eee;
+  padding: 20px;
+  border-radius: 4px;
+  box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em,
+    rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
+}
+
+.card-backdrop .alert {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.card-backdrop .alert-icon {
+  font-size: 35px;
+  color: red;
+}
+
+.card-backdrop .popup-message {
+  text-align: center;
+  margin-bottom: 15px;
+}
+
+.card-backdrop .btn-area {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.card-backdrop .btn {
+  cursor: pointer;
+  font-size: 14px;
+  background: rgb(255, 255, 255, 0);
+  border-radius: 3px;
+  border: 1px solid #000;
+  padding: 2px 10px;
+}
+
+.card-backdrop .btn:hover {
+  color: white;
+  background: #000;
 }
