--- a/src/pages/projectBoard/components/CardInformation.css
+++ b/src/pages/projectBoard/components/CardInformation.css
@@ -17,6 +17,7 @@
   border-radius: 4px;
   box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em,
     rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
+  overflow-y: scroll;
 }
 
 .card-info h2 {
@@ -61,6 +62,8 @@
 
 .card-info .project-row .row-content {
   width: 100%;
+  display: flex;
+  align-items: center;
 }
 
 .card-info .project-column-icon {
@@ -71,16 +74,29 @@
   margin-left: 8px;
 }
 
+.card-info .name-icon {
+  box-sizing: content-box;
+  border: 1px solid black;
+  border-radius: 100%;
+  width: 20px;
+  height: 20px;
+  line-height: 20px;
+  text-align: center;
+  font-size: 16px;
+  background: rgb(255, 255, 255, 0);
+  color: rgb(55, 53, 47);
+  margin-right: 2px;
+}
+
 .card-info .datepicker {
   outline: none;
   cursor: pointer;
   background: rgb(255, 255, 255, 0);
   border: 0;
   font-size: 16px;
-  width: fit-content;
   font-family: Noto Sans TC;
   border-radius: 4px;
-  width: 180px;
+  width: 80%;
 }
 
 .card-info .datepicker:hover,
@@ -118,4 +134,21 @@
   overflow-y: scroll;
   background: #fff;
   padding: 15px;
+}
+
+.card-info .save-btn {
+  cursor: pointer;
+  font-size: 16px;
+  background: rgb(255, 255, 255, 0);
+  border-radius: 3px;
+  border: 1px solid #000;
+  padding: 2px 10px;
+  width: fit-content;
+  height: fit-content;
+  margin: 15px auto;
+}
+
+.card-info .save-btn:hover {
+  color: white;
+  background: #000;
 }
