--- a/src/pages/projectBoard/components/Sidebar.css
+++ b/src/pages/projectBoard/components/Sidebar.css
@@ -1,10 +1,9 @@
 .sidebar {
-  width: 220px;
-  min-width: 200px;
+  min-width: 220px;
   background: rgb(216, 232, 235);
   min-height: 100vh;
   padding-top: 10px;
-  padding-left: 25px;
+  padding-left: 20px;
   font-size: 16px;
   color: rgba(25, 23, 17, 0.6);
 }
@@ -53,6 +52,7 @@
   margin-bottom: 10px;
   padding-left: 8px;
   display: flex;
+  font-weight: bolder;
 }
 
 .sidebar .add-project {
@@ -112,7 +112,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-right: 3px;
+  margin-right: 5px;
 }
 
 .sidebar .del-icon {
@@ -126,4 +126,8 @@
 
 .sidebar .trash-icon:hover {
   color: red;
+}
+
+.sidebar .team-title {
+  margin-top: 30px;
 }
