--- a/src/pages/projectBoard/ProjectBoard.css
+++ b/src/pages/projectBoard/ProjectBoard.css
@@ -9,6 +9,7 @@
   background-position: center;
   background-repeat: no-repeat;
   display: flex;
+  justify-content: center;
 }
 
 .project-board .error-message {
@@ -16,29 +17,32 @@
 }
 
 .project-board .content {
-  max-width: 1100px;
-  margin: 40px auto 40px 80px;
+  width: 1200px;
+  margin: 40px 0px;
 }
 
 .project-board .project-title-input {
-  margin-bottom: 30px;
   font-size: 20px;
   font-weight: 600;
   outline: none;
-  width: 260px;
-  border: 1px solid #ccc;
+  width: 100%;
+  border: 0;
   border-radius: 3px;
   height: 30px;
+  background: rgba(255, 255, 255, 0);
 }
 
 .project-board .project-title {
-  margin-bottom: 30px;
-  width: 260px;
+  width: 100%;
   height: 30px;
   font-weight: 500;
   font-size: 20px;
   display: flex;
   align-items: center;
+}
+
+.project-board .line {
+  margin: 15px 0;
 }
 
 .project-title .edit-icon {
@@ -53,4 +57,23 @@
 .project-board .board-area {
   display: flex;
   gap: 20px;
+}
+
+.project-board .newBoard {
+  cursor: pointer;
+  font-size: 28px;
+  margin-top: 8px;
+  border-radius: 5px;
+  color: rgba(25, 23, 17, 0.6);
+}
+
+.project-board .newBoard:hover {
+  background: var(--primary-color);
+  color: white;
+}
+
+.project-board .hide-title {
+  font-size: 16px;
+  color: rgba(25, 23, 17, 0.6);
+  border-bottom: 1px solid rgb(121 119 111 / 60%);
 }
