--- a/src/pages/projectBoard/components/Board.css
+++ b/src/pages/projectBoard/components/Board.css
@@ -153,7 +153,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 5px;
+  margin-left: auto;
   cursor: pointer;
 }
 
