--- a/src/pages/projectBoard/components/Sidebar.css
+++ b/src/pages/projectBoard/components/Sidebar.css
@@ -1,7 +1,7 @@
 .sidebar {
   min-width: 220px;
   background: rgb(216, 232, 235);
-  min-height: 100vh;
+  min-height: 800px;
   padding-top: 10px;
   padding-left: 20px;
   font-size: 16px;
