--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -6,6 +6,7 @@
   background: #edfeff;
   width: 100%;
   height: 700px;
+  display: block;
 }
 
 .home .section {
@@ -23,15 +24,14 @@
   width: 50%;
 }
 
-.home .content h2 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.home .content h1 {
   margin-top: 100px;
+  font-weight: 900;
 }
 
-.home .content h3 {
-  text-align: center;
+.home .content p {
+  margin-top: 30px;
+  text-align: justify;
 }
 
 .home .start-btn {
@@ -43,7 +43,7 @@
   width: 200px;
   height: 48px;
   border-radius: 5px;
-  font-weight: 500;
+  font-weight: 700;
 }
 
 .home .start-btn:hover {
@@ -59,13 +59,12 @@
 }
 
 .home .pic {
-  width: 80%;
+  width: 100%;
   height: 450px;
-  background-image: url("../../images/visual.jpg");
+  background-image: url("../../images/main.png");
   background-size: 100%;
   background-position: center;
   background-repeat: no-repeat;
-  border-radius: 5px;
 }
 
 .home a {
@@ -82,4 +81,61 @@
   color: var(--heading-color);
   background: var(--secondary-color);
   border-radius: 5px;
+}
+
+.home .introduction {
+  background: white;
+}
+
+.home .intro {
+  height: 600px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.home .intro-section {
+  width: 1200px;
+  height: 500px;
+  display: flex;
+}
+
+.home .intro-content {
+  flex: 0.8;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}
+
+.home .intro-content img {
+  width: 400px;
+  height: 300px;
+  object-fit: cover;
+}
+
+.home .intro-content p {
+  margin-top: 5px;
+}
+
+.home .intro-pic-area {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
+}
+
+.home .intro-pic-area img {
+  width: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+.home .intro-section-4 {
+  flex-direction: row-reverse;
+}
+
+.home .intro-section-4 .intro-pic-area {
+  padding: 0;
 }
