--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Noto+Sans+TC:wght@100;300;400;500;700;900&family=Merriweather:wght@300;400;700;900&display=swap');
 
 /* variables */
 :root {
@@ -16,7 +16,7 @@
 }
 
 body {
-    font-family: Noto Sans TC, Poppins, sans-serif, Microsoft JhengHei;
+    font-family: 'Merriweather',Noto Sans TC, Poppins, sans-serif, Microsoft JhengHei;
     margin: 0;
     font-size: 18px;
     background: var(--bg-color);
