--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -19,8 +19,8 @@
 .navbar .title {
   display: flex;
   align-items: center;
-  font-size: 28px;
-  font-weight: 700;
+  font-size: 30px;
+  font-weight: 900;
   letter-spacing: 1px;
 }
 
@@ -28,6 +28,7 @@
   object-fit: cover;
   height: 36px;
   width: 26px;
+  margin-bottom: 3px;
 }
 
 .navbar ul {
