--- a/src/pages/projectBoard/ProjectBoard.css
+++ b/src/pages/projectBoard/ProjectBoard.css
@@ -23,8 +23,9 @@
 }
 
 .project-board .project-title-input {
+  font-family: Noto Sans TC;
   font-size: 20px;
-  font-weight: 600;
+  font-weight: 500;
   outline: none;
   width: 100%;
   border: 0;
