--- a/src/pages/projectBoard/components/Board.css
+++ b/src/pages/projectBoard/components/Board.css
@@ -34,12 +34,12 @@
 }
 
 .board .edit-board-title-input {
+  font-family: Noto Sans TC;
   outline: none;
-  width: 80px;
+  width: 120px;
   border: 0;
   background-color: transparent;
   font-size: 16px;
-  font-weight: 600;
 }
 
 .board .check-icon {
