--- a/src/pages/projectBoard/ProjectBoard.css
+++ b/src/pages/projectBoard/ProjectBoard.css
@@ -14,7 +14,20 @@
 }
 
 .project-board .error-message {
-  margin: 80px auto 0 auto;
+  margin: 100px auto 0 auto;
+  display: flex;
+  gap: 5px;
+  height: fit-content;
+}
+
+.project-board .error-message div {
+  display: flex;
+  align-items: center;
+}
+
+.project-board .error-message .alert-icon {
+  margin-bottom: 3px;
+  color: #ff564e;
 }
 
 .project-board .content {
@@ -23,9 +36,9 @@
 }
 
 .project-board .project-title-input {
-  font-family: Noto Sans TC;
+  font-family: "Merriweather", Noto Sans TC;
   font-size: 20px;
-  font-weight: 500;
+  font-weight: 600;
   outline: none;
   width: 100%;
   border: 0;
@@ -38,7 +51,7 @@
 .project-board .project-title {
   width: 100%;
   height: 30px;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 20px;
   display: flex;
   align-items: center;
