--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -48,15 +48,29 @@
 
 .navbar .sign-btn {
   display: flex;
-  width: 70px;
+  padding: 0 5px;
   justify-content: center;
   align-items: center;
   height: 40px;
+  border-radius: 5px;
+  color: var(--primary-color);
 }
 
-.navbar .sign-btn:hover {
-  background: rgb(214, 214, 214);
-  border-radius: 5px;
+.navbar .login {
+  margin-right: 8px;
+}
+
+.navbar .signup {
+  border: 2px solid var(--primary-color);
+}
+
+.navbar .login:hover {
+  color: #038f99;
+}
+
+.navbar .signup:hover {
+  background: var(--primary-color);
+  color: white;
 }
 
 .navbar .greeting {
@@ -64,14 +78,14 @@
 }
 
 .navbar .btn {
+  font-family: "Merriweather", Noto Sans TC;
   cursor: pointer;
   font-size: 18px;
   background: white;
-  border-radius: 3px;
+  border-radius: 5px;
   color: var(--primary-color);
   border: 1px solid var(--primary-color);
   padding: 6px;
-  font-weight: bold;
   width: fit-content;
 }
 
@@ -95,7 +109,7 @@
   }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 500px) {
   .navbar .greeting {
     display: none;
   }
