--- a/src/components/PopupAlert.css
+++ b/src/components/PopupAlert.css
@@ -5,7 +5,9 @@
   background: #eee;
   padding: 20px;
   border-radius: 4px;
-  z-index: 350;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .popup-area .alert {
@@ -21,7 +23,7 @@
 
 .popup-area .popup-message {
   text-align: center;
-  margin-bottom: 15px;
+  margin: 5px 0 15px 0;
   font-size: 18px;
   color: black;
 }
@@ -40,7 +42,7 @@
   background: rgb(255, 255, 255, 0);
   border-radius: 3px;
   border: 1px solid #000;
-  padding: 2px 10px;
+  padding: 4px 10px;
 }
 
 .popup-area .btn:hover {
