--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -67,7 +67,7 @@
   background-repeat: no-repeat;
 }
 
-.home a {
+.home .start-btn a {
   text-decoration: none;
   color: white;
   width: inherit;
@@ -77,7 +77,7 @@
   justify-content: center;
 }
 
-.home a:hover {
+.home .start-btn a:hover {
   color: var(--heading-color);
   background: var(--secondary-color);
   border-radius: 5px;
@@ -88,7 +88,6 @@
 }
 
 .home .intro {
-  height: 600px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -96,7 +95,7 @@
 
 .home .intro-section {
   width: 1200px;
-  height: 500px;
+  margin-top: 120px;
   display: flex;
 }
 
@@ -134,8 +133,141 @@
 
 .home .intro-section-4 {
   flex-direction: row-reverse;
+  margin-bottom: 60px;
 }
 
 .home .intro-section-4 .intro-pic-area {
   padding: 0;
+}
+
+.home .btn {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: var(--primary-color);
+  width: 200px;
+  height: 48px;
+  border-radius: 5px;
+  font-weight: 700;
+  margin-top: 50px;
+  border: 1px solid var(--primary-color);
+}
+
+.home .btn a {
+  color: white;
+  text-decoration: none;
+  width: inherit;
+  height: inherit;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+}
+
+.home .btn::before {
+  content: "";
+  position: absolute;
+  width: 50px;
+  height: 200%;
+  background-color: rgba(255, 255, 255, 0.6);
+  transform: skew(45deg) translate3d(-200px, 0, 0);
+}
+
+.home .btn:hover::before {
+  transition: ease-in-out 0.6s;
+  transform: skew(45deg) translate3d(150px, 0, 0);
+}
+
+@media (max-width: 1200px) {
+  .home .section {
+    width: 95%;
+  }
+
+  .home .intro-section {
+    width: 95%;
+  }
+
+  .home .intro-content img {
+    width: 80%;
+    height: 40%;
+  }
+
+  .home .intro-pic-area {
+    justify-content: center;
+    padding-left: 0;
+  }
+
+  .home .intro-pic-area img {
+    width: 95%;
+  }
+}
+
+@media (max-width: 1000px) {
+  .home .intro-pic-area img {
+    width: 550px;
+  }
+}
+
+@media (max-width: 900px) {
+  .home .intro-pic-area img {
+    width: 500px;
+  }
+}
+
+@media (max-width: 768px) {
+  .home .background-pic {
+    height: 700px;
+  }
+
+  .home .section {
+    margin: 30px auto;
+    flex-direction: column-reverse;
+    top: 70%;
+  }
+
+  .home .content,
+  .home .picture {
+    width: 100%;
+  }
+
+  .home .pic {
+    width: 85%;
+    height: 300px;
+  }
+
+  .home .content h1 {
+    margin-top: 0;
+    text-align: center;
+  }
+
+  .home .content p {
+    margin-top: 15px;
+    text-align: center;
+  }
+
+  .home .intro-section {
+    flex-direction: column;
+    margin-top: 80px;
+    gap: 45px;
+  }
+
+  .home .intro-content img {
+    width: 300px;
+    height: 250px;
+  }
+
+  .home .intro-pic-area img {
+    width: 100%;
+  }
+
+  .home .intro-section-4 {
+    flex-direction: column-reverse;
+  }
+}
+
+@media (max-width: 500px) {
+  .home .pic {
+    width: 100%;
+  }
 }
