--- a/src/pages/projectBoard/components/CardInformation.css
+++ b/src/pages/projectBoard/components/CardInformation.css
@@ -33,7 +33,7 @@
   border: 0;
   width: 100%;
   font-size: 1.5em;
-  font-family: Noto Sans TC;
+  font-family: "Merriweather", Noto Sans TC;
   border-radius: 4px;
   padding: 0 5px;
 }
@@ -94,7 +94,7 @@
   background: rgb(255, 255, 255, 0);
   border: 0;
   font-size: 16px;
-  font-family: Noto Sans TC;
+  font-family: "Merriweather", Noto Sans TC;
   border-radius: 4px;
   width: 80%;
 }
