--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -22,6 +22,7 @@
 
 .home .content {
   width: 50%;
+  text-align: center;
 }
 
 .home .content h1 {
@@ -31,24 +32,61 @@
 
 .home .content p {
   margin-top: 30px;
-  text-align: justify;
+  text-align: center;
 }
 
-.home .start-btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.home .start-button {
   margin: 100px auto;
-  background: var(--primary-color);
-  width: 200px;
+  align-items: center;
+  background-color: #f6bc2d;
+  border: 2px solid #111;
+  border-radius: 8px;
+  box-sizing: border-box;
+  color: #111;
+  cursor: pointer;
+  display: flex;
+  font-family: "Merriweather", Noto Sans TC;
+  font-size: 16px;
   height: 48px;
-  border-radius: 5px;
-  font-weight: 700;
+  justify-content: center;
+  line-height: 24px;
+  max-width: 100%;
+  padding: 0 25px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  font-weight: 900;
 }
 
-.home .start-btn:hover {
-  color: var(--heading-color);
-  background: var(--secondary-color);
+.home .start-button:after {
+  background-color: #111;
+  border-radius: 8px;
+  content: "";
+  display: block;
+  height: 48px;
+  left: 0;
+  width: 100%;
+  position: absolute;
+  top: -2px;
+  transform: translate(8px, 8px);
+  transition: transform 0.2s ease-out;
+  z-index: -1;
+}
+
+.home .start-button:hover:after {
+  transform: translate(0, 0);
+}
+
+.home .start-button:active {
+  background-color: #ffdd88;
+  outline: 0;
+}
+
+.home .start-button:hover {
+  outline: 0;
 }
 
 .home .picture {
@@ -129,6 +167,8 @@
   width: 100%;
   object-fit: cover;
   border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
+    rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
 }
 
 .home .intro-section-4 {
@@ -138,6 +178,10 @@
 
 .home .intro-section-4 .intro-pic-area {
   padding: 0;
+}
+
+.home .intro-section-4 .intro-pic-area img {
+  box-shadow: none;
 }
 
 .home .btn {
