--- a/src/pages/projectBoard/components/Sidebar.css
+++ b/src/pages/projectBoard/components/Sidebar.css
@@ -278,6 +278,8 @@
   font-size: 14px;
   border-radius: 0 0 3px 3px;
   border-top: 1px solid rgba(25, 23, 17, 0.6);
+  overflow-y: scroll;
+  max-height: 200px;
 }
 
 .sidebar .option {
