--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ body {
     margin: 0;
     font-size: 18px;
     background: var(--bg-color);
+    overflow-x: hidden;
 }
 
 ul, li, p, h1, h2, h3, h4 {
